--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@
     // 1) Configure seus samples aqui. Coloque os arquivos em /sounds
     // key: tecla opcional para atalho; label: texto do botão; file: nome do mp3
     const SAMPLES = [
-      { key: '1', label: 'Refrão',     file: 'refrao.mp3' },
-      { key: '2', label: 'Drop',       file: 'drop.mp3' },
-      { key: '3', label: 'Uuuuh',      file: 'uuuuh.mp3' },
-      { key: '4', label: 'Brega Funk', file: 'bregafunk.mp3' },
+      { key: '1', label: 'Cairs',     file: 'Cairs.mp3' },
+      { key: '2', label: 'Inês',       file: 'Ines.mp3' },
+      { key: '3', label: 'Rodrigues',      file: 'JR.mp3' },
+      { key: '4', label: 'Mafalda', file: 'Mafalda.mp3' },
+      { key: '5', label: 'Margarida', file: 'Margarida.mp3' },
+      { key: '6', label: 'Mirella', file: 'Mirella.mp3' },
+      { key: '7', label: 'Sara', file: 'Sara.mp3' },
       // Adicione mais aqui 👇
       // { key: 'Q', label: 'Gratidão', file: 'gratidão.mp3' },
     ];
