--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
     </div>
   </div>
   <header>
-    <h1>Soundboard de Memes 🎵😂</h1>
-    <p class="desc">Clique nos botões (ou use o teclado). Suba seus .mp3 na pasta <code>/sounds</code> e edite a lista no código.</p>
+    <h1>Soundboard Piso Ø</h1>
+    <p class="desc">Clique nos botões (ou use o teclado).</p>
   </header>
 
   <main class="board" id="board"></main>
 
   <footer>
-    <div class="tips">Dica: mantenha os samples curtos (2–5s) e normalize o volume para soar uniforme.</div>
+    <div class="tips">—</div>
   </footer>
 
   <script>
