--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Soundboard de Memes 🎵😂</title>
+  <title>Soundboard Piso Ø</title>
   <style>
     :root {
       --bg: #0f0f12;
