--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <div class="topbar">
     <div class="topbar-inner">
-      <strong>Soundboard de Memes</strong>
+      <strong>Soundboard Piso Ø</strong>
       <button id="stopAll" class="btn-sec" title="Para todos os sons (atalho: Esc)">Parar tudo (Esc)</button>
     </div>
   </div>
