--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       { key: '5', label: 'Mirella', file: 'Mirella.mp3' },
       { key: '6', label: 'Sara', file: 'Sara.mp3' },
       { key: '7', label: 'Silvia', file: 'Silvia.mp3' },
+      { key: '8', label: 'Céu', file: 'Ceu.mp3' },
       // Adicione mais aqui 👇
       // { key: 'Q', label: 'Gratidão', file: 'gratidão.mp3' },
     ];
